--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/monitor.js",
-    "dev": "ts-node src/monitor.ts",
-    "test": "ts-node src/test-plant.ts"
+    "dev": "ts-node src/monitor.ts"
   },
   "dependencies": {
     "axios": "^1.6.0",
