add charts, improve logging

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ LUXPOWER_USERNAME=your_username
 LUXPOWER_PASSWORD=your_password
 LUXPOWER_API_ENDPOINT=https://eu.luxpowertek.com
 LUXPOWER_PLANT_ID=your_plant_id
+# Alternative: LUXPOWER_SERIAL_NUM=your_serial_number
 
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
@@ -10,3 +11,9 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 # Polling Intervals (in milliseconds)
 POLL_INTERVAL=30000
 COMMAND_POLL_INTERVAL=1000
+
+# History Cache Configuration
+# Set to 'false' to disable caching of historical data
+# When enabled, today's data is refreshed if cache is older than 1 hour
+# Historical data (past dates) is cached forever
+ENABLE_HISTORY_CACHE=true
