--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "luxpower-telegram-alerts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "build": "tsc",
     "start": "node dist/monitor.js",
-    "dev": "ts-node src/monitor.ts"
+    "dev": "tsx src/monitor.ts"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "sharp": "^0.33.0",
+    "form-data": "^4.0.5"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^22.19.7",
+    "tsx": "^4.19.2",
+    "typescript": "^5.9.3"
   }
 }
