--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ./.env:/app/.env:ro
       - ./subscribers.json:/app/subscribers.json
       - ./status.json:/app/status.json
+      - ./history-cache:/app/history-cache
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     environment:
