--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "sharp": "^0.33.0",
+    "@resvg/resvg-js": "^2.5.0",
     "form-data": "^4.0.5"
   },
   "devDependencies": {
