fix language persistence, implement simplified version for groups, add test notifications

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ COMMAND_POLL_INTERVAL=1000
 # When enabled, today's data is refreshed if cache is older than 1 hour
 # Historical data (past dates) is cached forever
 ENABLE_HISTORY_CACHE=true
+
+# Test Notifications Configuration
+# Set to 'true' to send test notifications after subscription (for testing purposes)
+# Default: false (disabled)
+ENABLE_TEST_NOTIFICATIONS=false
